// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup renders correctly when disabled 1`] = `
<div
  className="buttonGroup kindSecondary disabled"
  data-testid="button-group"
>
  <div
    aria-disabled={true}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText disabled button sizeSmall kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText disabled button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText disabled button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText disabled button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly when disabled 2`] = `
<div
  className="buttonGroup kindSecondary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label="as"
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with TERTIARY kind  1`] = `
<div
  className="buttonGroup kindTertiary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with componentClassName 1`] = `
<div
  className="buttonGroup testClassName kindSecondary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with large size 1`] = `
<div
  className="buttonGroup kindSecondary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeLarge kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeLarge kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeLarge kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeLarge kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with name 1`] = `
<div
  className="buttonGroup kindSecondary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;

exports[`ButtonGroup renders correctly with value 1`] = `
<div
  className="buttonGroup kindSecondary"
  data-testid="button-group"
>
  <div
    aria-disabled={false}
    aria-label=""
    className="buttonsContainer"
    role="group"
  >
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText selected button sizeSmall kindTertiary colorPrimary colorPrimaryActive activeButton rightFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Alpha
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Beta
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary rightFlat leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Gamma
    </button>
    <button
      aria-busy={false}
      aria-disabled={false}
      className="button optionText button sizeSmall kindTertiary colorPrimary leftFlat preventClickAnimation"
      data-testid="button"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      type="button"
    >
      Delta
    </button>
  </div>
</div>
`;
